--- a/ssm_dao/pom.xml
+++ b/ssm_dao/pom.xml
@@ -6,7 +6,6 @@
         <artifactId>ssm_back</artifactId>
         <groupId>com.guigu</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -49,7 +48,7 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus</artifactId>
-            <version>2.3</version>
+            <version>3.2.0</version>
         </dependency>
 
         <dependency>
@@ -94,6 +93,12 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+
         </dependency>
 
     </dependencies>
