--- a/ssm_domain/pom.xml
+++ b/ssm_domain/pom.xml
@@ -6,7 +6,6 @@
         <artifactId>ssm_back</artifactId>
         <groupId>com.guigu</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -46,7 +45,7 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus</artifactId>
-            <version>2.3</version>
+            <version>3.2.0</version>
         </dependency>
 
         <dependency>
@@ -80,6 +79,13 @@
             <artifactId>druid</artifactId>
             <version>1.1.17</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
