--- a/ssm_dao/pom.xml
+++ b/ssm_dao/pom.xml
@@ -101,5 +101,10 @@
 
         </dependency>
 
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
