--- a/pom.xml
+++ b/pom.xml
@@ -201,11 +201,17 @@
         </dependency>
 
         <!--   c3p0依赖-->
+<!--        <dependency>-->
+<!--            <groupId>com.mchange</groupId>-->
+<!--            <artifactId>c3p0</artifactId>-->
+<!--            <version>0.9.5</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
             <version>0.9.5</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.springframework</groupId>
