--- a/ssm_domain/pom.xml
+++ b/ssm_domain/pom.xml
@@ -85,6 +85,12 @@
             <artifactId>mybatis-plus</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.11.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
